[package]
name = "bebop"
version = "0.1.0"
authors = ["tuckerrrrrrrrrrrr <tucker1014@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rodio = "0.12.0"
tui = "0.9.1"
termion = "1.5"
signal-hook = "0.1.16"
